<resources>
    <string name="app_name">MobileBookkeeping</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="title_home">Transactions</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Profile</string>
    <string name="done">DONE</string>


    <string name="login_title">LOGIN</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="title_trasaction">Transaction</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_new_event">Creating New Event</string>
    <string name="confirm_textview">Confirm</string>
    <string name="add_dialog_confirm">Confirming info</string>
    <string name="add_category">Add a category</string>
    <string name="add_category_hint">Enter a category name</string>
    <string name="comment_hint">Leave comment here</string>
    <string name="add_comment">Comment:</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="amount_hint">0</string>
    <string name="enter_the_amount">Enter the amount:</string>
    <string name="select">Select</string>
    <string name="_2021">2021</string>
    <string name="feb">Feb</string>
    <string name="select_a_category">Select a category:</string>
    <string name="set_budget">Set Budget</string>
    <string name="select_month">Select Month</string>
    <string name="budget_remain">Budget Remaining</string>
    <string name="month">Month</string>
    <string name="login">Login</string>
    <string name="set_the_username">Set the Username</string>
    <string name="sign_out">Sign Out</string>

</resources>