<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:id="@+id/login_title"
        android:textStyle="bold"
        android:textSize="40sp"
        android:layout_centerInParent="true"
        android:translationY="-120dp"
        android:layout_margin="60dp"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:layout_below="@id/login_title"
        android:layout_centerHorizontal="true"
        android:translationY="-120dp"
        android:hint="@string/username">

    </androidx.appcompat.widget.AppCompatEditText>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:id="@+id/password"
        android:layout_centerHorizontal="true"
        android:translationY="-100dp"
        android:layout_below="@+id/username"
        >

    </androidx.appcompat.widget.AppCompatEditText>

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:id="@+id/login_button"
        android:layout_below="@id/password"
        android:translationY="-70dp"
        android:backgroundTint="@android:color/background_dark"
        android:layout_centerHorizontal="true"/>






</RelativeLayout>