<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#FFC107">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2020"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="24dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="December"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="18dp"/>
        </LinearLayout>
        <Button
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_margin="10dp"
            android:background="@drawable/ic_baseline_keyboard_arrow_down_24"
            android:layout_gravity="center_vertical"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/add_event_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:textStyle="bold"
        android:textSize="24dp"
        android:textColor="@color/black"
        android:text="Creating New Event"
       />

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="#8A8787"
        />

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/underline">
    <ImageView
        android:layout_margin="10dp"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/meal"
        />

        <RelativeLayout
            android:id="@+id/category_row"
            android:layout_width="344dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"

                android:text="Select a category:"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <Button
                android:id="@+id/category_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:hint="@string/select"
                android:translationX="250dp"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </RelativeLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/underline">
        <ImageView
            android:layout_margin="10dp"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/meal"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"
            android:text="@string/enter_the_amount"/>

        <EditText
            android:id="@+id/amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="60dp"
            android:hint="@string/amount_hint"
            android:imeOptions="actionDone"
            android:inputType="number"

            android:textColor="#F44336"
            android:textSize="16sp"
            android:textStyle="italic" />

        <ToggleButton
            android:id="@+id/toggle_button"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:textOff="@string/expense"
            android:textOn="@string/income"
            >


        </ToggleButton>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/underline">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_margin="10dp"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/meal"
                />
            <TextView
                android:id="@+id/comment_edit_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_gravity="center_vertical"
                android:text="@string/add_comment"/>
            </LinearLayout>

        <EditText
            android:id="@+id/user_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:textSize="16sp"
            android:textColor="#F44336"
            android:layout_gravity="center_vertical"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:hint="@string/comment_hint"/>

    </LinearLayout>

    <Button
        android:id="@+id/done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/black"
        android:layout_gravity="center"
        android:text="@string/done"
        android:textColor="@color/white"
        android:textSize="30sp"
        />
</LinearLayout>